--- a/quotemind-frontend/src/index.html
+++ b/quotemind-frontend/src/index.html
@@ -5,9 +5,9 @@
   <title>QuotemindFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="icono.png">
 </head>
-<body>
+<body class="bg-white dark:bg-gray-900">
   <app-root></app-root>
 </body>
 </html>
